add onboarding wizard

--- a/src/app/forecasting/input/ynab/ynab.component.html
+++ b/src/app/forecasting/input/ynab/ynab.component.html
@@ -273,7 +273,7 @@
                   >Birthdate</label
                 >
                 <div class="col">
-                  <div class="input-group">
+                  <div class="input-group" data-tour="birth-date">
                     <input
                       class="form-control"
                       id="ngBirthDate"
@@ -426,7 +426,7 @@
                 class="col-sm-12 col-md-5 col-form-label"
                 >Monthly Investment Contribution</label
               >
-              <div class="col">
+              <div class="col" data-tour="monthly-contributions">
                 <input
                   type="number"
                   class="form-control"
@@ -689,7 +689,7 @@
       <div ngbAccordionCollapse>
         <div ngbAccordionBody>
           <ng-template>
-            <div class="row">
+            <div class="row" data-tour="retirement-expenses">
               <table class="table table-sm col-12 expenses">
                 <thead class="table-dark">
                   <tr>
