--- a/src/app/forecasting/output/fire-dashboard/fire-dashboard.component.html
+++ b/src/app/forecasting/output/fire-dashboard/fire-dashboard.component.html
@@ -66,7 +66,7 @@
       <div class="col-md-3 mb-3">
         <div class="text-muted small">Coast Working Years</div>
         <div class="h4 mb-0">{{ calculateInput.coastYearsRange }}</div>
-        <div class="small text-muted">Based on current portfolio</div>
+        <div class="small text-muted">Based on the above assumptions, your current portfolio will groe into enough to cover expenses in roughly this many years. In other words, if you do not contribute any more to savings, you would need to work this much longer.</div>
       </div>
     </div>
   </div>
