--- a/src/app/forecasting/output/output.component.html
+++ b/src/app/forecasting/output/output.component.html
@@ -1,4 +1,7 @@
 <div class="row" *ngIf="calculateInput; else loading">
+<button type="button" (click)="startOnboarding()">
+  Explain this tool
+</button>
   <div class="col">
     <!-- Coast FIRE Investment Projection -->
     <div class="mb-4">
