UI improvements, onboarding tour

--- a/src/app/forecasting/input/basic/basic-input.component.html
+++ b/src/app/forecasting/input/basic/basic-input.component.html
@@ -43,7 +43,7 @@
           <span class="input-group-text">%</span>
         </div>
       </div>
-      <small id="annualSafeWithdrawalRateHelp" class="form-text text-muted">Safe Withdrawl Rate</small>
+      <small id="annualSafeWithdrawalRateHelp" class="form-text text-muted">Safe Withdrawal Rate</small>
       <div><small><a target="fi-read-more" href="https://www.madfientist.com/safe-withdrawal-rate/">4% (Floor of 3.5%) - Mad Fientist <fa-icon [icon]="['fas', 'external-link-square-alt']" size="sm"></fa-icon></a></small></div>
       <div><small><a target="fi-read-more" href="http://www.mrmoneymustache.com/2012/05/29/how-much-do-i-need-for-retirement/">4% - Mr. Money Mustache <fa-icon [icon]="['fas', 'external-link-square-alt']" size="sm"></fa-icon></a></small></div>
     </div>
