--- a/src/app/forecasting/output/impact/impact.component.html
+++ b/src/app/forecasting/output/impact/impact.component.html
@@ -1,8 +1,7 @@
 <p>
-  Each component of your spending adds time to your FI Date. Eliminate spending
-  in a category below and move that spending to savings contributions, and you
-  can reduce your FI Date by the amount under
-  <strong>Impact on FI Date</strong>.
+  Each spending category adds time to your FI Date. Eliminating a category and
+  redirecting that amount to contributions reduces your FI Date by the time
+  shown under <strong>Impact on FI Date</strong>.
 </p>
 <div class="table-responsive">
   <table class="table table-striped">
